# rasp_rest_api

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
src/: __main__.py  config.py  loader.py
src/routers/: routes.py
src/routers/schedule/: get_group.py  get_schedule.py
src/services/: __init__.py  schedule.py  validate.py
